2010-02-16 Erwin Waterlander <waterlan@xs4all.nl>
	* version 5.0

2010-02-15 Erwin Waterlander <waterlan@xs4all.nl>
	* unix2dos: Fix problem of reading Mac files.
	* unix2dos: Added command 'unix2mac'.
	* unix2dos: Can use DOS2UNIX_LOCALEDIR i.s.o. UNIX2DOS_LOCALEDIR.
	* dos2unix: 'mac2unix' command can have a prefix.
	* Makefile: mac2unix and unix2mac are installed as soft links.

2010-02-13 Erwin Waterlander <waterlan@xs4all.nl>
	* Bundled dos2unix and unix2dos in one package.
	* dos2unix/unix2dos : Cleanup messages and manual.
	* dos2unix: Option -l --newline also works in MAC mode.
	* unix2dos: Added option -l, --newline.
	* unix2dos: Added MAC mode. Convert Unix line endings
	  to Mac line endings.

2010-02-10 Erwin Waterlander <waterlan@xs4all.nl>
	* unix2dos: Makefile : 
	  - Use GNU standard directory variables everywhere.
	  - New target 'dist-tbz' creates bzip2 compressed archive.

2010-02-10 Philipp Thomas <psmt@opensuse.org>
	* unix2dos: po/de.po : Added German translation.
	* unix2dos: Makefile :
	  - Added $(RPM_OPT_FLAGS) to CFLAGS.
	  - Use DESTDIR only in install and uninstall targets (not in variables,
	    this is more common practice).

2010-02-03 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix: Makefile : 
	  - Use GNU standard directory variables everywhere.

2010-02-03 Philipp Thomas <psmt@opensuse.org>
	* dos2unix: po/de.po : Added German translation.
	* dos2unix: Makefile :
	  - Use GNU standard directory variable 'datadir' i.s.o. 'sharedir'.
	  - Added $(RPM_OPT_FLAGS) to CFLAGS.
	  - New target 'dist-tbz' creates bzip2 compressed archive.
	  - Use DESTDIR only in install and uninstall targets (not in variables,
	    this is more common practice).

2010-02-02 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Update Dutch translation.

2010-01-24 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: version 4.1.2

2010-01-22 Tim Waugh <twaugh@redhat.com>
	* dos2unix/unix2dos: Preserve file mode in 'new file mode'.