@@ -21,11 +21,16 @@ INCLUDEPATH = .;C:\BC4\INCLUDE
 #		*List Macros*
 
 
-EXE_dependencies =  \
+d2u_EXE_dependencies =  \
  dos2unix.obj
 
+u2d_EXE_dependencies =  \
+ unix2dos.obj
+
+all: dos2unix.exe unix2dos.exe mac2unix.exe unix2mac.exe
+
 #		*Explicit Rules*
-dos2unix.exe: dos2unix.cfg $(EXE_dependencies)
+dos2unix.exe: dos2unix.cfg $(d2u_EXE_dependencies)
   $(TLINK) /v/x/c/P-/L$(LIBPATH) @&&|
 c0l.obj+
 dos2unix.obj
@@ -36,6 +41,23 @@ mathl.lib+
 cl.lib
 |
 
+unix2dos.exe: dos2unix.cfg $(u2d_EXE_dependencies)
+  $(TLINK) /v/x/c/P-/L$(LIBPATH) @&&|
+c0l.obj+
+unix2dos.obj
+unix2dos
+		# no map file
+emu.lib+
+mathl.lib+
+cl.lib
+|
+
+
+mac2unix.exe: dos2unix.exe
+	copy /v dos2unix.exe mac2unix.exe
+
+unix2mac.exe: unix2dos.exe
+	copy /v unix2dos.exe unix2mac.exe
 
 #		*Individual File Dependencies*
 dos2unix.obj: dos2unix.cfg dos2unix.c 
@@ -44,6 +66,15 @@ dos2unix.obj: dos2unix.cfg dos2unix.c
 unix2dos.obj: dos2unix.cfg unix2dos.c 
 	$(CC) -c unix2dos.c
 
+strip:
+	tdstrip dos2unix.exe
+	tdstrip mac2unix.exe
+	tdstrip unix2dos.exe
+	tdstrip unix2mac.exe
+
+clean:
+	del *.obj
+	del *.exe
 
 #		*Compiler Configuration File*
 dos2unix.cfg: bcc.mak
@@ -58,7 +89,7 @@ dos2unix.cfg: bcc.mak
 -L$(LIBPATH)
 -DMSDOS
 -DVER_REVISION="5.0.1-beta1"
--DVER_DATE="2010-02-28"
+-DVER_DATE="2010-03-02"
 | dos2unix.cfg
 
 
