@@ -1,2 +1,2 @@
 DOS2UNIX_VERSION = 5.0.1-beta1
-DOS2UNIX_DATE = 2010-02-28
+DOS2UNIX_DATE = 2010-03-02
